Fix bug size of tag Link is not fit the children.

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -30,6 +30,8 @@ body {
 
 a[href] {
     text-decoration: none;
+    display: inline-block;
+    width: fit-content;
 }
 
 button {
