--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -19,7 +19,8 @@
             display: flex;
             flex-direction: column;
             gap: 30px;
-            background: linear-gradient(rgba(39,11,96,0.5), rgba(39,11,96,0.2)), url(https://i.pinimg.com/564x/b8/d7/cc/b8d7cc523676f6fb632c680692d7abe2.jpg);
+            background: linear-gradient(rgba(39, 11, 96, 0.5), rgba(39, 11, 96, 0.2)),
+                url(https://i.pinimg.com/564x/b8/d7/cc/b8d7cc523676f6fb632c680692d7abe2.jpg);
             background-size: cover;
             padding: 50px;
 
@@ -37,7 +38,7 @@
             }
 
             button {
-                width: 50%;
+                width: 120px;
                 padding: 10px 12px;
                 font-size: 1.2rem;
                 font-weight: bold;
